--- a/components/project-info/project-info-block.component.html
+++ b/components/project-info/project-info-block.component.html
@@ -1,19 +1,19 @@
 <style>
     project-info-block {
         display: block;
-        padding-top: 18px;
+        padding: 18px 0 4px 0;
         width: 280px;
         font: 13px/18px globerregular;
         vertical-align: top;
     }
-
+    
     .project-info-block__header {
         color: #909090;
         font: 12px/24px globersemibold;
         text-transform: uppercase;
         position: relative;
     }
-
+    
     .sidebar-info-main__link {
         color: inherit;
         text-decoration: none;
