--- a/components/project-info/sidebar-text.component.html
+++ b/components/project-info/sidebar-text.component.html
@@ -5,10 +5,15 @@
         padding-top: 18px;
         display: block;
     }
+    
+    .sidebar-text__header {
+        font-family: globerbold;
+        line-height: 24px;
+    }
 </style>
 
 <template id="sidebar-text__tmpl">
-    
+    <h3 class="sidebar-text__header"></h3>
 </template>
 
 <script>
@@ -21,19 +26,14 @@
 
         constructor() {
             super()
-            this.appendChild(SidebarTextTemplate.content.cloneNode(true));
+            this.insertBefore(SidebarTextTemplate.content.cloneNode(true), this.firstChild);
+            this.querySelector('.sidebar-text__header').innerHTML = this.getAttribute('header');
         }
 
-        connectedCallback() {
-        }
-        
-        adoptedCallback() {
-        }
+        connectedCallback() {}
+
+        adoptedCallback() {}
     }
 
     customElements.define('sidebar-text', SidebarText);
-
-
-
-
 </script>
