--- a/components/navbar/navbar-vartical-item.component.html
+++ b/components/navbar/navbar-vartical-item.component.html
@@ -24,7 +24,7 @@
         align-items: center;
     }
     .navbar-vertical__item:hover {
-        color: #68C0FF;
+/*        color: #68C0FF;*/
         cursor: pointer;
     }
 
@@ -83,7 +83,7 @@
 
                     if (this.textContent.toLowerCase().trim() == SidebarHeaderCollect[i].querySelector('h3').textContent.toLowerCase().trim()) {
                         if (SidebarHeaderCollect[i].parentElement.style.display == 'none') {
-                            SidebarHeaderCollect[i].parentElement.style.display = 'block';
+                            SidebarHeaderCollect[i].parentElement.style.display = 'flex';
                         } else {
                             SidebarHeaderCollect[i].parentElement.style.display = 'none';
                         }
@@ -103,7 +103,7 @@
 
                     if (this.textContent.toLowerCase().trim() == SidebarHeaderCollect[i].querySelector('h3').textContent.toLowerCase().trim()) {
                         if (SidebarHeaderCollect[i].parentElement.style.display == 'none') {
-                            SidebarHeaderCollect[i].parentElement.style.display = 'block';
+                            SidebarHeaderCollect[i].parentElement.style.display = 'flex';
                         } else {
                             SidebarHeaderCollect[i].parentElement.style.display = 'none';
                         }
