--- a/components/requirement/card-text.component.html
+++ b/components/requirement/card-text.component.html
@@ -12,7 +12,7 @@
     .requirement-card-text__header {
         font: 12px 'globersemibold';
         line-height: 13px;
-        margin-top: 3px;
+        margin-top: 8px;
         color: #000;
         padding-left: 10px;
         padding-right: 10px;
@@ -66,6 +66,6 @@
         }
     }
 
-    customElements.define('requirement-card-text', RequirementCardText);
+    customElements.define('card-text', RequirementCardText);
 
 </script>
