--- a/components/project-info/project-info.component.html
+++ b/components/project-info/project-info.component.html
@@ -2,3 +2,4 @@
 <link rel="import" href="create-project-info-block.component.html">
 <link rel="import" href="project-info-item.component.html">
 <link rel="import" href="sidebar-text.component.html">
+<link rel="import" href="tree-item.component.html">
